# darwin

./: .gitignore  AUDIT_REPORT.md  AUDIT_REPORT_FINAL.md  Anchor.toml  E2E_REPORT.md  FORUM_POST.md  IMPROVEMENT_PLAN.md  LAUNCH_READINESS.md  MATH_AUDIT.md  PERFORMANCE_REPORT.md  PLAN.md  README.md  SUBMISSION.md  VERIFIED_STATS.md
app/: BUILD_COMPLETE.md  DARWIN_MVP.md  INTEGRATION_COMPLETE.md  WC3UI_INTEGRATION.md  WC3UI_QUICKSTART.md  package-lock.json  package.json  vercel.json
app/scripts/: verify-evolution.mjs
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/app/: page.tsx
app/src/app/battle/: page.tsx
app/src/app/create/: page.tsx
app/src/app/leaderboard/: page.tsx
app/src/components/: AgentCard.tsx  AiAnalyst.tsx  BattleEvolutionDashboard.tsx  BattleTestCard.tsx  BreedingView.tsx  CandleChart.tsx  ChartPlaceholder.tsx  DnaHelix.tsx  EvolutionCanvas.tsx  FamilyTree.tsx  GenerationProgress.tsx  GenerationTimeline.tsx  GenomeRadar.tsx  Graveyard.tsx  Header.tsx  Leaderboard.tsx  LiveTrading.tsx  SolanaPanel.tsx  StatsCards.tsx  Tooltip.tsx
app/src/lib/: agentUtils.ts  battleEngine.ts  rate-limit.ts  solana-client.ts  solana.ts  storage.ts  utils.ts
app/src/types/: agent.ts  index.ts
programs/darwin_protocol/: Cargo.toml
programs/darwin_protocol/src/: errors.rs  lib.rs
programs/darwin_protocol/src/instructions/: advance_generation.rs  breed.rs  initialize_protocol.rs  kill_agent.rs  mod.rs  record_performance.rs  spawn_agent.rs
programs/darwin_protocol/src/state/: agent.rs  generation.rs  mod.rs  protocol.rs
(+28 files in other folders)
