[package]
name = "darwin_protocol"
version = "0.1.0"
description = "Darwin — Evolutionary Trading Agents on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "darwin_protocol"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
blake3 = "=1.6.1"
